# purebazaar

./: Justfile  README.md  translators.sh
data/: io.github.kolunmi.Bazaar.gschema.xml  io.github.kolunmi.Bazaar.metainfo.xml.in  io.github.pureblue_os.purebazaar.desktop.in  io.github.pureblue_os.purebazaar.gschema.xml  io.github.pureblue_os.purebazaar.metainfo.xml.in  io.github.pureblue_os.purebazaar.search-provider.ini.in  io.github.pureblue_os.purebazaar.service.in  meson.build
data/dbus/: io.github.pureblue_os.purebazaar.service.in  meson.build
po/: POTFILES.in  ar.po  bg.po  bs.po  cs.po  de.po  es.po  fa_IR.po  fr.po  hu.po  id.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: bazaar.gresource.xml  bz-addons-dialog.c  bz-app-size-dialog.c  bz-app-tile.c  bz-application.c  bz-apps-page.c  bz-appstream-description-render.c  bz-browse-widget.c  bz-category-tile.c  bz-content-provider.c  bz-context-tile.c  bz-curated-app-tile.c  bz-decorated-screenshot.c  bz-detailed-app-tile.c  bz-entry-inspector.c  bz-featured-carousel.c  bz-featured-tile.c  bz-flathub-category-section.c  bz-flathub-page.c  bz-full-view.blp  bz-full-view.c  bz-global-progress.c  bz-global-progress.h  bz-gnome-shell-search-provider.c  bz-hardware-support-dialog.c  bz-inspector.c  bz-installed-page.c  bz-installed-tile.c  bz-license-dialog.c  bz-markdown-render.c  bz-preferences-dialog.blp  bz-preferences-dialog.c  bz-progress-bar.c  bz-releases-list.c  bz-rich-app-tile.c  bz-screenshot-page.c  bz-screenshots-carousel.c  bz-search-widget.c  (+9 more)
(+4 files in other folders)
